tests/lean/subst_bug.lean.expected.out
subst_bug.lean:4:0: error: tactic failed, there are unsolved goals
state:
b2 : bool
⊢ ff && b2 = ff
